[package]
name = "nav-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_nav = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_demo_lib = { workspace = true }
eframe = { workspace = true }
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tracing = "^0.1.41"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "*"
#wasm-bindgen = "=0.2.90"

[dev-dependencies]
trunk = "0.20.0"
 
